PyMaker/datas/object2/RawHTML/i16501/Python_DOC_referPages.error-in-python-tutorial-example-code.txt
<div class="post-text" itemprop="text">
<p>I'm working my way through the python tutorial here and the following code is used as an example. </p>
<pre><code>&gt;&gt;&gt; def fib(n):    # write Fibonacci series up to n
...     """Print a Fibonacci series up to n."""
...     a, b = 0, 1
...     while a &lt; n:
...         print(a, end=' ')
...         a, b = b, a+b
...     print()
...
&gt;&gt;&gt; # Now call the function we just defined:
... fib(2000)
0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597
</code></pre>
<p>When I run it in the Canopy editor though I get the following error message</p>
<pre><code>File "&lt;ipython-input-25-224bab99ef80&gt;", line 5
    print(a, end=' ')
            ^
SyntaxError: invalid syntax
</code></pre>
<p>The syntax is the same across PyLab, using python in the command prompt, and the Canopy Editor so I can't see why it wouldn't just run...</p>
</div>
<div class="post-text" itemprop="text">
<p>You are trying to run that code with the wrong version of Python.  The example is using Python 3.x, where <a href="https://docs.python.org/3/library/functions.html#print" rel="nofollow"><code>print</code> is a function</a>, not Python 2.x, where <a href="https://docs.python.org/2/reference/simple_stmts.html#grammar-token-print_stmt" rel="nofollow"><code>print</code> is a statement</a>.</p>
<hr/>
<p>Note that for this specific example, you can write the function like so:</p>
<pre><code>&gt;&gt;&gt; def fib(n):
...     """Print a Fibonacci series up to n."""
...     a, b = 0, 1
...     while a &lt; n:
...         print a,
...         a, b = b, a+b
...
&gt;&gt;&gt; fib(2000)
0 1 1 2 3 5 8 13 21 34 55 89 144 233 377 610 987 1597
&gt;&gt;&gt;
</code></pre>
<p>Nevertheless, it is still a good idea to upgrade your version of Python if you will be using Python 3.x throughout your tutorial.</p>
</div>
<span class="comment-copy">Are you using Python 3?</span>
<span class="comment-copy">The example uses Python 3.</span>
<span class="comment-copy">Just use <code>print(a)</code></span>
<span class="comment-copy">Thanks, Strongly suggest switching to Python 3? I'm using "Python for Data Analysis" which is geared toward 2.x I believe.</span>
<span class="comment-copy">Well, that depends on what you want to do.  If you are learning Python for a specific thing that requires Python 2.x, then I would stay with Python 2.x.  But if you are trying to learn Python in general, then I would upgrade and use the new, improved version.  Remember that Python 2.x, like Python 1.x, will become entirely obsolete someday. You don't want to become an expert in something that is no longer used. :)</span>
<span class="comment-copy"><a href="http://stackoverflow.com/questions/16142764/python-3-3-in-enthought-canopy" title="python 3 3 in enthought canopy">stackoverflow.com/questions/16142764/…</a>. Seems like this is still true?</span>
